[gd_scene load_steps=16 format=2]

[ext_resource path="res://characters/Mentor/Timer1.gd" type="Script" id=1]
[ext_resource path="res://Image file/textdesign-04.png" type="Texture" id=2]
[ext_resource path="res://Image file/textdesign-05.png" type="Texture" id=3]
[ext_resource path="res://workspaces/Dev_BA/janitor.glb" type="PackedScene" id=4]
[ext_resource path="res://Image file/Hallway_2.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/battlenet/new_dynamicfont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Image file/janitor_002.png" type="Texture" id=7]
[ext_resource path="res://characters/Mentor/Mentor.gd" type="Script" id=8]
[ext_resource path="res://characters/Mentor/MentorI.gd" type="Script" id=9]

[sub_resource type="ArrayMesh" id=4]

[sub_resource type="Skin" id=3]
bind_count = 13
bind/0/name = ""
bind/0/bone = -1
bind/0/pose = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
bind/1/name = ""
bind/1/bone = -1
bind/1/pose = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
bind/2/name = ""
bind/2/bone = -1
bind/2/pose = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
bind/3/name = ""
bind/3/bone = -1
bind/3/pose = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
bind/4/name = ""
bind/4/bone = -1
bind/4/pose = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
bind/5/name = ""
bind/5/bone = -1
bind/5/pose = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
bind/6/name = ""
bind/6/bone = -1
bind/6/pose = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
bind/7/name = ""
bind/7/bone = -1
bind/7/pose = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
bind/8/name = ""
bind/8/bone = -1
bind/8/pose = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
bind/9/name = ""
bind/9/bone = -1
bind/9/pose = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
bind/10/name = ""
bind/10/bone = -1
bind/10/pose = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
bind/11/name = ""
bind/11/bone = -1
bind/11/pose = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
bind/12/name = ""
bind/12/bone = -1
bind/12/pose = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( -1, -1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1 )

[sub_resource type="BoxShape" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0, 0, 0 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 2070, 1430 )

[node name="Mentor" type="Area"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
collision_mask = 2
script = ExtResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="Spatial" type="MeshInstance" parent="."]
cast_shadow = 2
mesh = SubResource( 4 )
skin = SubResource( 3 )
skeleton = NodePath("../X")

[node name="X" type="Spatial" parent="."]

[node name="janitor" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1.05, 0, 0, 0, 3.78, 0, 0, 0, 0.85, 0, 0, 0 )
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Mentor" type="StaticBody" parent="."]
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2" type="CollisionShape" parent="Mentor"]
transform = Transform( 1.05, 0, 0, 0, 3.78, 0, 0, 0, 0.85, 0, 0, 0 )
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="Mentor"]
transform = Transform( 1.05, 0, 0, 0, 3.78, 0, 0, 0, 0.85, 0, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 2, 0, 0, 0, 4, 0, 0, 0, 2.5, 0, 0, 0 )
shape = SubResource( 5 )
__meta__ = {
"_editor_description_": "														"
}

[node name="MentorI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -822, 1045 )
script = ExtResource( 9 )

[node name="Timer1" type="Timer" parent="MentorI"]
wait_time = 2.7
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="MentorI"]
margin_left = 60.0
margin_top = 440.0
margin_right = 100.0
margin_bottom = 480.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="BackBoard" type="Panel" parent="MentorI/Panel"]
margin_left = -60.0
margin_top = -440.0
margin_right = 964.0
margin_bottom = 160.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="NinePatchRect" type="NinePatchRect" parent="MentorI/Panel"]
margin_left = 585.0
margin_top = -382.0
margin_right = 925.0
margin_bottom = -19.0
rect_scale = Vector2( 1.16993, 2.2377 )
texture = ExtResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="Backtext" type="NinePatchRect" parent="MentorI/Panel"]
margin_right = 904.0
margin_bottom = 120.0
texture = ExtResource( 3 )
region_rect = Rect2( 37.764, 71.282, 941.108, 205.582 )
__meta__ = {
"_editor_description_": ""
}

[node name="NinePatchRect2" type="NinePatchRect" parent="MentorI/Panel"]
margin_top = -70.0
margin_right = 410.0
margin_bottom = -20.0
texture = ExtResource( 2 )
region_rect = Rect2( 67.45, 15.688, 293, 55 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="MentorI/Panel/NinePatchRect2"]
margin_left = 91.0
margin_top = 11.0
margin_right = 327.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0.721569, 0.886275, 0.823529, 1 )
custom_fonts/font = ExtResource( 6 )
align = 1
autowrap = true
clip_text = true

[node name="Label" type="Label" parent="MentorI/Panel"]
margin_left = 129.0
margin_top = 19.0
margin_right = 747.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.701961, 0.878431, 0.811765, 1 )
custom_fonts/font = ExtResource( 6 )
autowrap = true
clip_text = true

[node name="Button2" type="NinePatchRect" parent="MentorI/Panel"]
margin_left = 857.0
margin_top = -367.0
margin_right = 957.0
margin_bottom = -317.0
texture = ExtResource( 2 )
region_rect = Rect2( 67.1929, 18.5056, 295.511, 48.545 )
patch_margin_left = 1
patch_margin_right = 2

[node name="Label" type="Label" parent="MentorI/Panel/Button2"]
margin_left = 6.0
margin_top = 7.0
margin_right = 96.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.721569, 0.886275, 0.823529, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Skip+1>"
autowrap = true
clip_text = true
__meta__ = {
"_editor_description_": ""
}

[node name="Button2" type="Button" parent="MentorI/Panel/Button2"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 100.0
margin_bottom = 50.0

[node name="Button" type="NinePatchRect" parent="MentorI/Panel"]
margin_left = 858.0
margin_top = -425.0
margin_right = 958.0
margin_bottom = -375.0
texture = ExtResource( 2 )
region_rect = Rect2( 67.1929, 18.5056, 295.511, 48.545 )
patch_margin_left = 1
patch_margin_right = 2

[node name="Label" type="Label" parent="MentorI/Panel/Button"]
margin_left = 20.0
margin_top = 7.0
margin_right = 95.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.721569, 0.886275, 0.823529, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Skip >"
autowrap = true
clip_text = true
__meta__ = {
"_editor_description_": ""
}

[node name="Button" type="Button" parent="MentorI/Panel/Button"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 100.0
margin_bottom = 50.0

[connection signal="body_exited" from="." to="." method="_on_Mentor_body_exited"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="Area" to="MentorI" method="_on_Area_body_entered"]
[connection signal="body_entered" from="Area" to="MentorI/Timer1" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="body_exited" from="Area" to="MentorI" method="_on_Area_body_exited"]
[connection signal="body_exited" from="Area" to="MentorI/Timer1" method="_on_Area_body_exited"]
[connection signal="timeout" from="MentorI/Timer1" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="MentorI/Timer1" to="MentorI" method="_on_Timer_timeout"]
[connection signal="pressed" from="MentorI/Panel/Button2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MentorI/Panel/Button2/Button2" to="MentorI" method="_on_Button2_pressed"]
[connection signal="pressed" from="MentorI/Panel/Button2/Button2" to="MentorI/Timer1" method="_on_Button2_pressed"]
[connection signal="pressed" from="MentorI/Panel/Button/Button" to="MentorI" method="_on_Button_pressed"]
[connection signal="pressed" from="MentorI/Panel/Button/Button" to="MentorI/Timer1" method="_on_Button_pressed"]
